welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:6: error: not found: value c
	marqueSol(c)
                  ^FlowerPot:11: error: not found: value c
	marqueSol(c)
                  ^FlowerPot:14: error: not found: value c
	marqueSol(c)
                  ^FlowerPot:18: error: not found: value c
	marqueSol(c)
                  ^FlowerPot:22: error: too many arguments for method flower: ()Unit
	flower(Color.red)
              ^